# netflix_project

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_20_1620-0f340a87ed16_please_create.py  2025_12_20_1627-5ca4b010eb5e_series.py  2025_12_20_1639-10996f7afe1c_it_won_t_work.py  2025_12_21_1634-8cbe6eebdc84_user_model.py  2025_12_25_1246-b8b4e8ceb463_created_email_for_users_deleted_username.py  2025_12_25_1253-ebbdb20f8091_return_hashed_password.py  2025_12_25_1253-ebde30dd82ef_asd.py  2026_01_16_1045-1707f3d646a3_.py
backend/authorization/: __init__.py  auth_deps.py  token_enc_dec.py  token_schemas.py  utilites.py
backend/core/: base_class.py  config.py  db_helper.py
backend/logging_and_exc/: __init__.py  exception_handler.py  pre_post_up.py
backend/models/: __init__.py  author.py  geners.py  movie.py  series.py  user.py
backend/routers/: __init__.py  base_requests.py  delete_put_patch_router.py  get_post_router.py
frontend/: package.json
frontend/html_pages/: login_page.html
frontend/html_scripts/: funcs.js  funcs_deleter.js  login.js
html/: package-lock.json
html/html_pages/: add_author.html  add_movie.html  add_series.html  authors.html  delete_page.html  login_page.html  main_page.html  movies.html  series.html  update_author.html  update_movie.html  update_series.html  update_user.html  users.html
html/html_scripts/: add_author.js  add_movie.js  authors.js  funcs.js  funcs_adders.js  funcs_deleter.js  funcs_getters.js  funcs_updaters.js  login.js  movies.js  register.js  series.js  (+2 more)
(+88 files in other folders)
