[project]
name = "project-db-auth"
version = "0.1.0"
description = "There won't be useful description"
authors = [
    {name = "Dima",email = "texetbuy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "pydantic[settings] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
