[project]
name = "project-db-auth"
version = "0.1.0"
description = "There won't be useful description"
authors = [
    {name = "Dima",email = "texetbuy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "pydantic[settings] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi[standard] (>=0.126.0,<0.127.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
